# gitlab_rss_mailer

./: .dockerignore  .gitignore  Dockerfile  README.md  config.example.yml  docker-compose.yml  pyproject.toml
gitlab_rss_mailer/: __init__.py  __main__.py
